--- a/css/css_logeo.css
+++ b/css/css_logeo.css
@@ -1,10 +1,17 @@
+html{
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+}
+
 body{
-    background-image: url("https://images2.alphacoders.com/103/1039991.jpg");
-    font-family: 'Raleway', sans-serif;
-    color: aliceblue;
+    background-image: url("https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700420861.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed ;
+    font-family: 'Raleway', sans-serif;
+    color: aliceblue;
     height: auto;
     width: auto;
 }
@@ -19,7 +26,7 @@ header{
     background: radial-gradient(circle, rgba(4,7,52,1) 35%, rgba(1,10,0,1) 68%);
     border-style: none;
     border-radius: 20px;
-    width: 40%;
+    width: 50%;
     margin: auto;
 }
 
@@ -67,11 +74,12 @@ input:focus~label{
     color: rgb(39, 237, 240);
 }
 
+.flex_boton{
+    display: flex;
+    justify-content: center;
+}
 
 #button{
-    position: relative;
-    left: 43%;
-    text-align: center;
     border-radius: 6px;
     width: auto;
     border: none;
@@ -92,7 +100,7 @@ input:focus~label{
 }
 
 a{
-    color: rgb(255, 230, 0);
+    color: rgb(0, 255, 0);
 
 }
 
@@ -105,7 +113,7 @@ a:hover{
     width: auto;
     text-align: center;
     margin: auto;
-    color: aquamarine;
+    color: rgb(0, 255, 0);
     padding-top: 20px;
 }
 
@@ -113,12 +121,12 @@ a:hover{
 .pie-pagina{
     width: 100%;
     background-color: #23293f;
-    height: auto;
+    margin: 0 auto;
 }
 
 .pie-pagina .grupo-1{
     width: 90%;
-    max-width: 1200px;
+    max-width: auto;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -187,34 +195,9 @@ a:hover{
         padding: 35px 0px;
     }
 }
-@media screen and (max-width: 670px){
-    figure{
-        size: 1rem;
-    }
-    
-}
 
-@media screen and (max-width: 501px) {
+@media screen and (max-width: 750px) {
     #fieldset_logeo{
-        width: 70%;
+        width: 90%;
     }
-    label{
-        font-size: .7rem;
-    }
-    #button{
-        width: 30%;
-    }
-    #creacion_cuenta{
-        font-size: .8rem;
-    }
-}
-
-@media screen and (max-width: 401px){
-    label{
-        font-size: .6rem;
-    }
-    #fieldset_logeo{
-        width: 80%;
-    }
-    
 }
