completado foro.css

--- a/css/foro.css
+++ b/css/foro.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background: url("../img/fondo_foro.jpg") ;
+	background: url("../TPO---CAC2023/img/fondo_foro.jpg") ;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
