--- a/css/foro.css
+++ b/css/foro.css
@@ -10,7 +10,12 @@ body {
     z-index: 3;
 }
 
+.logo-img{
+    width: 100px;
+    padding: 2px 10px;
+}
 .mi_perfil{
+    margin-left: auto;
     display: flex;
     justify-content: flex-end;
     color: yellowgreen;
@@ -50,7 +55,7 @@ header {
     flex-flow: row wrap;
 }
 
-.btn{
+#buscadorBoton{
     border-radius: 12.5rem;
     display: flex;
     /*justify-content: flex-end;*/
@@ -60,6 +65,21 @@ header {
     padding: 0.625rem;
     display: flex;
     flex-wrap: wrap;
+}
+input{
+    outline: none;
+    box-sizing: border-box;
+    height: 40px;
+    width: 10;
+    padding: 0 20px;
+    color: rgb(0, 0, 0);
+    border-radius: 30px;
+    font-size: 10px;
+    border: 1px solid;
+    transition: all .7s ease;
+    align-items: flex-start;
+    background-color: rgb(255, 255, 255);
+    opacity: 100%;
 }
 
 .place{
@@ -132,6 +152,26 @@ header {
     list-style: none ;
     width: 200px;
     background-color: #f54fd9;
+}
+
+.caja{
+    
+    color: rgb(150, 214, 89);
+    font-family: 'Chakra Petch', sans-serif;
+    font-weight:bold;
+    font-size:1.3rem;
+    text-decoration:double;    
+    opacity:500;
+    text-align: center;
+    margin: 2px;
+    margin-left: 4px;
+    margin-right: 4px;
+    height: 30px;
+    
+}
+.caja3{
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 
@@ -384,6 +424,11 @@ nav li a:hover {
     font-size: 20px;
 }
 
+.box p{
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 18px;
+}
+
 /*responsividad*/
 
 @media screen and (max-width:800px) {
@@ -416,6 +461,7 @@ menu{
 #titulo{
     width: 75%;
 }
+
 
 main, #contenedor_grande {
     margin-left: 0;
